fix: align center title

--- a/apps/mobile/src/index.css
+++ b/apps/mobile/src/index.css
@@ -247,7 +247,7 @@ ion-modal.availability-modal {
   .desktop-frame-branding {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     z-index: 1;
   }
 }
